foundations/block-and-inline/02-margin-and-padding-2/style.css
body {
  background: #eee;
  font-family: sans-serif;
}

.card {
  width: 400px;
  background: #fff;
  margin: 16px auto;
  padding:6px;
}

.title {
  background: #e3f4ff;
  margin:5px;
  margin-bottom:10px;
  margin-top:15px;
  padding:8px;
}

.content {
  background: #e3f4ff;
  margin:5px;
  margin-bottom:10px;
  padding:8px;
  padding-top:20px;
  padding-bottom:20px;
}

.button-container {
  background: #e3f4ff;
  margin:5px;
}

button {
  background: white;
  border: 1px solid #eee;
  padding-left:20px;
  padding-right: 20px;
  padding-top:8px;
  padding-bottom:8px;
  margin-left:90px;
  margin-top:30px;
  margin-bottom:8px;
}

